feat(cli): 同步 feature/3.0.x CLI 路线——命令面对齐（Jackson 2 / JDK 8 适配）
- 自 3.0.x@2c15db6 同步 CLI 路线 src/ 与双语 README（不含 pom.xml；
  app-server WS 路线基于 JDK 11+ HttpClient，不进 JDK 8 线）
- CLI 命令面对齐：queue/delete/agents/migrate-rollouts、login 四认证
  形态（executeWithStdin stdin 管道）、exec --ignore-rules /
  --ignore-user-config、GlobalOptions --remote / --remote-auth-token-env
- 修复 sandbox 旗标旧拼写 --permissions-profile → --permission-profile
- 废弃 mcpServer()：上游已移除 codex mcp-server，指引改用 appServer
- JDK 8 适配：Path.of → Paths.get、Map.of → Collections.singletonMap；
  Jackson 3→2 适配（tools.jackson → com.fasterxml 同名包）
- pom.xml 保持本分支既有基线（JDK 8 + jackson-bom 2.18.9 + junit 5.11.4）
- 测试 191 个全绿（JDK 8 + Maven 3.9.16）